# ecu

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  GD32F30x_CL.svd  Makefile  README.md  example_spi_proto_for_student.txt  gcc_arm.ld  nm.txt
CMSIS/GD/GD32F30x/Include/: gd32f30x.h
CMSIS/GD/GD32F30x/Source/: system_gd32f30x.c
GD32F30x_standard_peripheral/Include/: gd32f30x_gpio.h
GD32F30x_standard_peripheral/Source/: gd32f30x_gpio.c
Inc/: RTE_Components.h
Periph/CAN/Inc/: can.hpp
Periph/CAN/Src/: can.cpp
Periph/GPIO/Src/: gpio.cpp
Periph/SPI/Inc/: spi.hpp
Periph/SPI/Src/: spi.cpp
Project/: app.cpp  app.h  app.hpp  gpio.cpp  gpio.hpp  main.c  main.h
Project/Inc/: RTE_Components.h  app.hpp  it.h  it.hpp
Project/Src/: app.cpp  it.c  it.cpp  main.c
System/: gcc_arm.ld  openocd_gdlink_gd32f30x.cfg  startup_ARMCM4.S
